# ChainHost

./: .gemini  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  README.md  package.sh
.github/workflows/: build.yml
docs/: TUTORIAL.md  TUTORIAL.txt
installer/: ChainHost.iss
scripts/: install.sh
src/: ChainGraph.cpp  ChainGraph.h  LfoEngine.cpp  LfoEngine.h  MacroManager.cpp  MacroManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginScanner.cpp  PluginScanner.h
src/ui/: ArcKnob.cpp  ArcKnob.h  ChainHostEditor.cpp  ChainHostEditor.h  ChainHostLookAndFeel.cpp  ChainHostLookAndFeel.h  Colors.h  FabKnob.cpp  FabKnob.h  LfoPanel.cpp  LfoPanel.h  LfoWaveformEditor.cpp  LfoWaveformEditor.h  MappingPanel.cpp  MappingPanel.h  PluginSlotComponent.cpp  PluginSlotComponent.h  PluginWindow.cpp  PluginWindow.h  PluginWindowMac.mm  PresetBrowser.cpp  PresetBrowser.h  ScanProgressPanel.cpp  ScanProgressPanel.h
